--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/appointment
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=api.appointment
+spring.mail.password=AppointmentAPI2020
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 
 #spring.datasource.initialization-mode=ALWAYS
 #spring.datasource.schema=classpath*:db/initDB.sql
